# aicompanion

./: Cargo.toml  DESIGN.md  Makefile  README.md  package.json
.github/workflows/: release.yml
src/: app.css  app.html  app.rs  config.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/analysis/: call_graph.rs  metrics.rs  mod.rs  parser.rs
src-tauri/src/git/: diff.rs  mod.rs
src/analysis/: call_graph.rs  metrics.rs  mod.rs  parser.rs
src/git/: diff.rs  mod.rs  watcher.rs
src/lib/: store.svelte.ts  tauri.ts  types.ts
src/lib/components/: AppShell.svelte  SideNavBar.svelte  StatusBar.svelte  TopMenuBar.svelte
src/lib/components/left/: CallGraph.svelte  FunctionsTable.svelte  LeftPanel.svelte
src/lib/components/right/: DiffView.svelte  RightPanel.svelte  TabBar.svelte
src/routes/: +page.svelte
src/ui/: diff_view.rs  graph.rs  left_panel.rs  mod.rs  right_panel.rs
